Adding Jest && additional project for karma
1. Added Jest packages
2. Updated angular.json - Created new project config to support running Karma && Jest in same project

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
+    "test-karma": "ng test karma",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
@@ -24,16 +25,21 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
+    "@angular-builders/jest": "^8.3.2",
     "@angular-devkit/build-angular": "~0.803.10",
     "@angular/cli": "~8.3.10",
     "@angular/compiler-cli": "~8.2.11",
     "@angular/language-service": "~8.2.11",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jest": "^25.1.2",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
+    "glob": "^7.1.6",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
+    "jest": "^25.1.0",
+    "jest-preset-angular": "^8.0.0",
     "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
